package org590c;
// version : alpha3-v1412
message OpReturn {

  enum Type {
    TAG = 1;
    FILE_PROOF = 2;
    WWW = 3;
    CHUNK = 11;
    ASSET_GENESIS     = 31;
    ASSET_TRANSCATION = 32;
    COMMON_ARRAY = 90;
  }

  enum ExtType {
    ORG_590C = 1;       // http://590c.org/ext/[eid]
    ORG_590C_TXT = 2;   // http://590c.org/ext/[eid].txt
    ORG_590C_JSON = 3;  // http://590c.org/ext/[eid].json
    HTTP = 11;          // http://[eid]
    HTTP_TXT = 12;      // http://[eid].txt
    HTTP_JSON = 13;     // http://[eid].json
    HTTPS = 21;         // https://[eid]
    HTTPS_TXT = 22;     // https://[eid].txt
    HTTPS_JSON = 23;    // https://[eid].json
    GOOGL = 31;         // http://goo.gl/[eid]
    BITLY = 32;         // http://bit.ly/[eid]
    PASTEBIN = 33;      // http://pastebin.com/[eid]
    PASTIE = 34;        // http://pastie.org/[eid]
    GITHUB_RAW = 35;     // https://raw.githubusercontent.com/[eid]
  }

  enum HashType {
    SHA2_256_RIPEMD_160 = 1;
    SHA2_256_SHA2_256 = 2;
    SHA2_256=21;
    SHA2_384=22;
    SHA2_512=23;
    SHA3_256=31;
    SHA3_384=32;
    SHA3_512=33;
    RIPEMD_128=51;
    RIPEMD_160=52;
    RIPEMD_256=53;
    RIPEMD_320=54;
  }

  message Tag {
    optional string tagString = 1;
    optional int32 tagInt32 = 2;
    optional bytes tagBytes = 3;
  }

  message TxRef {
    required int32 blockHeight = 1;
    required int32 txIndex = 2;
  }

  message Www {
    // optional Where where = 1;
    required int64 when = 1; // 1417520051 = Tue, 02 Dec 2014 11:34:11 GMT
    required double lat = 2; // 24.1321302
    required double lon = 3; // 120.6962365
    optional string whatString = 4;
    optional int32 whatInt = 5;
    optional ExtType wahtExtType = 6;
    optional string wahtExtId = 7;
  }

  message Chunk {
    required int32 index = 1;
    required bytes valueBytes = 2;
  }


  message FileProof {
    required HashType hashType = 1;
    required bytes hashValue = 2;
    optional ExtType extType = 3;
    optional string eidString = 4;
    optional int32 eidInt32 = 5;
    optional string tagString = 6;
    optional int32 tagInt32 = 7;
  }


  required Type type = 1;
  optional Tag tag = 2;
  optional FileProof fileProof = 3;
  optional Www www = 4;
  extensions 100 to 199;
}

extend OpReturn{
   optional string foo = 101;
}
